--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,8 @@
   <body>
     <h1>Current Power Creation</h1>
     <div id="currentWattsChart" class="epoch category10" style="height: 200px"></div>
-    <div id="watts"></div>
+    <div id="wattsCurrent"></div>
+    <div id="wattsLast"></div>
 
   </body>
 </html>
